--- a/autoTest/apitest/templates/left.html
+++ b/autoTest/apitest/templates/left.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <nav class="navbar navbar-inverse navbar-fixed-top"></nav>
-<table border="0" ">
+<table border="0">
     <tr>
         <td><a href="../bug_manage" target="mainFrame">&nbsp;&nbsp;测试用例管理</a></td>
     </tr>
@@ -14,9 +14,13 @@
     <tr>
         <td><a href="../apis_manage" target="mainFrame">&nbsp;&nbsp;接口测试用例管理</a></td>
     </tr>
+    {#    <tr>#}
+    {#        <td><a href="http://localhost:8089" target="mainFrame">&nbsp;&nbsp;性能测试</a></td>#}
+    {#    </tr>#}
     <tr>
-        <td><a href="http://localhost:8089" target="mainFrame">&nbsp;&nbsp;性能测试</a></td>
+        <td><a href="../scenario_testing" target="mainFrame">&nbsp;&nbsp;场景接口测试</a></td>
     </tr>
+
 </table>
 
 </body>
